modules/gdscript/tests/scripts/analyzer/errors/static_var_export_annotation.gd
# GH-77098 p.3

@static_unload

@export static var a: int

func test():
	pass
